<resources>
    <string name="app_name">InventoryManagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu strings-->

    <string name="menu_nav_inventory">Active Inventory</string>
    <string name="menu_nav_scan">Scan Item</string>
    <string name="menu_nav_add_inventory">Add Inventory</string>
    <string name="menu_section_help">Help</string>
    <string name="menu_nav_help_about">About</string>
    <string name="menu_nav_help_settings">Settings</string>


</resources>
