<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_scan_item"
            android:title="@string/menu_nav_scan"/>
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/menu_nav_inventory"/>
        <item
            android:id="@+id/nav_add_inventory"
            android:icon="@drawable/ic_add_new_inventory"
            android:title="@string/menu_nav_add_inventory"/>
    </group>

    <item android:title="@string/menu_section_help">
        <menu>
            <item
                android:id="@+id/nav_help_about"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_nav_help_about"/>
            <item
                android:id="@+id/nav_help_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings"/>
        </menu>
    </item>

</menu>
